# Molecular_AD

./: .gitignore  README.md  pyproject.toml
log/: failed_images_0.txt  parallel_joblog.txt  parallel_joblog_0.txt  parallel_joblog_1.txt
src/: inference_pipeline.py  test_pipeline.py  train_pipeline.py
src/analyze_dci/: analyze.py  extract_latents.py
src/configs/: __init__.py  config.py  defaults.yaml  experiment.yaml
src/shared/models/: __init__.py  logger.py  loss_function.py  metrics.py  optimization.py  trainer.py  visualization.py
src/shared/models/CIMLR/: CIMLR.py  CIMLR_Feature_Ranking.py  Estimate_Number_of_Clusters_CIMLR.py  __init__.py  utils.py
src/shared/services/data/: __init__.py  dataset.py  transforms.py
src/shared/services/models_hub/: __init__.py  base.py  utils.py
src/shared/services/models_hub/beta_tc_vae/: __init__.py  model.py
